<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Decider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="coin">Coin Flip</string>
    <string name="dice">Dice Roll</string>
    <string name="drawing">Draw Names</string>
    <string name="main_title">Choose Your Destiny!</string>
    <string name="title_activity_coin_flip">Coin Flip</string>
    <string name="set_dice_dialog_title">Set number of dice</string>
    <string name="name_drawn_dialog">The drawn name is&#8230;</string>
    <string name="draw_name_dialog_positive">Draw again</string>
    <string name="draw_name_diallog_negative">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_set_dice">Set dice</string>
    <string name="click_to_flip">Click the coin to flip!</string>
    <string name="click_to_roll">Click the dice to roll!</string>
    <string name="result_empty">Result: </string>
    <string name="result_heads">Result: HEADS!</string>
    <string name="result_tails">Result: TAILS!</string>
    <string name="die1">Die 1: </string>
    <string name="die2">Die 2: </string>
    <string name="die3">Die 3: </string>
    <string name="die4">Die 4: </string>
    <string name="die5">Die 5: </string>
    <string name="die6">Die 6: </string>
    <string name="title_activity_dice_roll">Dice Roll</string>
    <string name="title_activity_draw_names">Draw Names</string>
    <string name="enter_text_default">Enter names separated by commas.</string>
    <string name="reset">Reset</string>
    <string name="enter">Enter</string>
    <string name="remove_names">Remove after drawing</string>
    <string name="replace_names">Replace after drawing</string>
    <string name="nothing_entered">Nothing was entered</string>
    <string name="exhausted">The list is exhausted!</string>
    <string name="about_dialog_title">About The Decider</string>
    <string name="about">The Decider is an app that takes difficult decisions out of your hands and puts them into
        the phone in your hand.\n\nNo more thinking for you!</string>
</resources>
