<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/reg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/coin_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@drawable/button_drawable"
            android:layout_margin="5dp"
            android:text="@string/coin"
            android:onClick="launchCoinFlip"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/dice_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@drawable/button_drawable"
            android:layout_margin="5dp"
            android:text="@string/dice"
            android:onClick="launchDiceRoll"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/draw_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@drawable/button_drawable"
            android:layout_margin="5dp"
            android:text="@string/drawing"
            android:onClick="launchDrawNames"
            android:textSize="20sp"/>

        </LinearLayout>

</RelativeLayout>
