<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fate.thedecider.DrawNames"
    android:background="@color/reg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/text_field"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:background="@color/light"
            android:hint="@string/enter_text_default"
            android:textColor="@color/black"
            android:textColorHighlight="@color/accent"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:onClick="resetList"
                android:background="@drawable/button_drawable"
                android:layout_margin="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:onClick="enterNames"
                android:background="@drawable/button_drawable"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
